--- a/package.json
+++ b/package.json
@@ -5,11 +5,14 @@
   "keywords": [],
   "main": "src/index.js",
   "dependencies": {
+    "local-storage": "^2.0.0",
     "react": "16.12.0",
     "react-dom": "16.12.0",
+    "react-keyboard-event-handler": "^1.5.4",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.0.1",
-    "styled-components": "^5.0.1"
+    "styled-components": "^5.0.1",
+    "use-persisted-state": "^0.3.0"
   },
   "scripts": {
     "start": "react-scripts start",
